<resources>

    // ACTIVITY MAIN //

    <string name="app_name">Muscle Pump</string>
    <string name="et_usuario">Campo para introducir tu nombre</string>
    <string name="tx_avatar">Textview "Introduce tu nombre"</string>
    <string name="btn_avatar1">Avatar 1 (hombre)</string>
    <string name="btn_avatar2">Avatar 2 (mujer)</string>
    <string name="btn_avatar3">Avatar 3 (hombre)</string>
    <string name="btn_avatar4">Avatar 4 (mujer)</string>
    <string name="btn_avatar5">Avatar 5 (mujer)</string>
    <string name="btn_avatar6">Avatar 6 (hombre)</string>

    ----------------------------------------------------------------------
    // MENU PRINCIPAL //

    <string name="tv_fondo">Textview con el fondo </string>
    <string name="iv_pasar">Imageview con avatar </string>
    <string name="tv_nombre">Textview con el nombre</string>
    <string name="iv_hombre">Imageview con perfil de hombre</string>
    <string name="imageView13">Imageview para ir a rutina pecho</string>
    <string name="iv_brazo">Imageview para ir a rutina brazo</string>
    <string name="imageView10">Imageview para ir a rutina espalda</string>
    <string name="imageView12">Imageview para ir a rutina piernas</string>
    <string name="tv_nada">Textview Selecciona tu rutina</string>
    <string name="iv_flecha1">Imageview flecha1</string>
    <string name="iv_flecha2">Imageview flecha2</string>
    <string name="iv_flecha3">Imageview flecha3</string>
    <string name="iv_flecha4">Imageview flecha4</string>




    // OVERFLOW //

    <string name="item3">Rutinas adicionales </string>
    <string name="item2">Alimentación</string>
    <string name="item1">Estiramientos</string>
    <string name="item4">Noticias</string>
    ----------------------------------------------------------------------

    // ADICIONALES //

    <string name="image_espalda">Imagen espalda fondo</string>
    <string name="image_piernas">Imagen pierna fondo </string>
    <string name="image_brazos">Imagen brazo fondo </string>
    <string name="image_hombros">Imagen hombros fondo </string>
    <string name="image_pecho">Imagen pecho fondo </string>

    // ADICIONALES 2 //

    <string name="wv_adicionales">Campo para ver web de ejercicios adicionales</string>
    <string name="btn_volveradicional2">Botón para volver a menú principal</string>

    -------------------------------------------------------------------------------

    // ESTIRAMIENTOS //


    // ESTIRAMIENTOS 2 //

    <string name="wv_estiramientos">Campo para ver web de ejercicios adicionales</string>
    <string name="btn_volverestiramientos2">Botón para volver a menú principal</string>

    // TEMPORIZADOR //

    <string name="play">Botón para iniciar temporizador y música de 30 segundos</string>
    <string name="progress_bar">Barra de progreso de los 30 segundos</string>


</resources>