<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#BBB0DA"
    tools:context=".MainActivity_Adicionales">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="343dp"
        android:layout_height="591dp"
        android:layout_margin="8dp"
        android:layout_marginStart="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/image_espalda"
                android:layout_width="match_parent"
                android:layout_height="348dp"
                android:background="@drawable/imagebutton_borde_redondeado"
                android:contentDescription="@string/image_espalda"
                android:onClick="Navegarespalda"
                app:srcCompat="@drawable/image_espalda" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/textview_borde_redondeado_sincolor"
                android:onClick="Navegarespalda"
                android:text="EJERCICIO ESPALDA"
                android:textAlignment="center"
                android:textColor="#004b77"
                android:textSize="20sp"
                android:textStyle="bold|italic" />

            <ImageButton
                android:id="@+id/image_pecho"
                android:layout_width="match_parent"
                android:layout_height="355dp"
                android:layout_marginTop="30dp"
                android:contentDescription="@string/image_pecho"
                android:onClick="Navegarpecho"
                android:textAlignment="center"
                app:srcCompat="@drawable/image_pecho" />

            <TextView
                android:id="@+id/textView15"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/textview_borde_redondeado_sincolor"
                android:text="EJERCICIO PECHO"
                android:textAlignment="center"
                android:textColor="#004b77"
                android:textSize="20sp"
                android:textStyle="bold|italic" />

            <ImageButton
                android:id="@+id/image_brazos"
                android:layout_width="match_parent"
                android:layout_height="361dp"
                android:layout_marginTop="30dp"
                android:background="#00FFFFFF"
                android:contentDescription="@string/image_brazos"
                android:onClick="Navegarbrazo"
                app:srcCompat="@drawable/image_brazos" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/textview_borde_redondeado_sincolor"
                android:text="EJERCICIO BRAZOS"
                android:textAlignment="center"
                android:textColor="#004b77"
                android:textSize="20sp"
                android:textStyle="bold|italic" />

            <ImageButton
                android:id="@+id/image_hombros"
                android:layout_width="match_parent"
                android:layout_height="343dp"
                android:layout_marginTop="30dp"
                android:contentDescription="@string/image_hombros"
                android:onClick="Navegarhombros"
                app:srcCompat="@drawable/image_hombros" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/textview_borde_redondeado_sincolor"
                android:text="EJERCICIO HOMBROS"
                android:textAlignment="center"
                android:textColor="#004b77"
                android:textSize="20sp"
                android:textStyle="bold|italic" />

            <ImageButton
                android:id="@+id/image_piernas"
                android:layout_width="match_parent"
                android:layout_height="325dp"
                android:layout_marginTop="30dp"
                android:contentDescription="@string/image_piernas"
                android:onClick="Navegarpiernas"
                app:srcCompat="@drawable/image_piernas" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/textview_borde_redondeado_sincolor"
                android:text="EJERCICIO PIERNAS"
                android:textAlignment="center"
                android:textColor="#004b77"
                android:textSize="20sp"
                android:textStyle="bold|italic" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>